iptables/rules.v6
# Generated by ip6tables-save v1.8.4 on Wed Dec  2 15:34:23 2020
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:sshguard - [0:0]
-A INPUT -j sshguard
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -s 2001:6a8:2880:a021::6/128 -j ACCEPT
-A INPUT -s 2001:6a8:2880:a021::1/128 -j ACCEPT
-A INPUT -s 2001:6a8:2880:a077::cd/128 -j ACCEPT
-A INPUT -s ::1/128 -j ACCEPT
-A INPUT -p ipv6-icmp -j ACCEPT
-A INPUT -p tcp -m tcp --dport 25 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 993 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22345 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp6-port-unreachable
-A FORWARD -j REJECT --reject-with icmp6-port-unreachable
-A OUTPUT -j ACCEPT
COMMIT
# Completed on Wed Dec  2 15:34:23 2020
